--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
       href="https://fonts.googleapis.com/css2?family=Miniver&family=Pacifico&family=Playfair+Display:ital,wght@0,700;1,700&family=Poppins:wght@500;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d8fdcc4697.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Portfolio project</title>
   </head>
   <body>
     <h1>Hello World</h1>
+    <p>Instagram <i class="fa-brands fa-instagram"></i></p>
   </body>
 </html>
