--- a/index.html
+++ b/index.html
@@ -34,7 +34,27 @@
       <p>Hello, I am</p>
       <h1>Rorisang Mathiba</h1>
       <h2 class="mb-3">Front-end developer based in South Africa</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-6"></div>
+        <div class="col-6">
+          <h2 class="mb-5">Yogurt Project</h2>
+          <p class="mb-5 text-muted">
+            Far far away, behind the word mountains, far from the cuntries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            langauge ocean. A small river name Duden flows by
+          </p>
+          <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
