--- a/index.html
+++ b/index.html
@@ -42,17 +42,55 @@
       Featured Project which my best projects be choice to show
     </p>
     <div class="container">
-      <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6">
-          <h2 class="mb-5">Yogurt Project</h2>
-          <p class="mb-5 text-muted">
-            Far far away, behind the word mountains, far from the cuntries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            langauge ocean. A small river name Duden flows by
-          </p>
-          <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Yogurt Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the cuntries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large langauge ocean. A small river name Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the cuntries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large langauge ocean. A small river name Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionary.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dictionary Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the cuntries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large langauge ocean. A small river name Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+          </div>
         </div>
       </div>
     </div>
