--- a/about.html
+++ b/about.html
@@ -30,20 +30,22 @@
     <title>Portfolio project</title>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
-        <div class="col-6">
-          <h1>Hi I am Rorisang Mathiba</h1>
-          <h2 class="mt-4">Front-end Developer, based in South Africa</h2>
-          <p class="mt-4">
-            For anyone who wants to start learning code, this workshop is very
-            interesting. You will be challenged with different exercises, and
-            everything is well explained, homework and deadlines are good for
-            keep focus
-          </p>
-          <a href="#" class="btn btn-branding">View my projects</a>
+        <div class="col-lg-6">
+          <div class="content">
+            <h1>Hi I am Rorisang Mathiba</h1>
+            <h2 class="mt-4">Front-end Developer, based in South Africa</h2>
+            <p class="mt-4">
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+            <a href="#" class="btn btn-branding">View my projects</a>
+          </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6">
           <img src="images/woman.png" class="img-fluid" />
         </div>
       </div>
