--- a/index.html
+++ b/index.html
@@ -113,6 +113,34 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+
+          <div>
+            <a href="" class="btn btn-branding mt-4">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a href="mailto:rorisang@gmail.com" class="email-link"
+            >rorisang@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mt-3">
+          <a href="https://www.instagram.com/rorisang" target="_blank">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.twitte.com/rorisang" target="_blank"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+          <a href="https://www.github.com/rorisang" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
