--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About Rorisang is a front-end developer based in South Africa"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,9 +31,35 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Portfolio project</title>
+    <title>About Front-end developer Rorisang</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Rorisang Logo"
+          />
+          <img
+            src="images/logo-small.png"
+            class="logo d-block d-md-none"
+            alt="Rorisang Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Rorisang">About</a>
+          </li>
+          <li><a href="/work.html" title="Rorisang's Work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Rorisang">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -42,7 +72,7 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="#" class="btn btn-branding">View my projects</a>
+            <a href="/work.html" class="btn btn-branding">View my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -50,5 +80,56 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-4"
+            title="Contact Rorisang"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <a href="mailto:rorisang@gmail.com" class="email-link"
+          >rorisang@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mt-3">
+        <a
+          href="https://www.instagram.com/rorisang"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitte.com/rorisang"
+          target="_blank"
+          title="X Profile"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+        <a
+          href="https://www.github.com/rorisang"
+          target="_blank"
+          title="Github Profile"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+      </div>
+      <p class="text-center mt-5">
+        🧚🏽‍♀️This project was coded by Rorisang Mathiba, and it is
+        <a
+          href="https://github.com/Rorisang-Mathiba/portfolio-project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
