--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Rorisang is a front-end developer based in South Africa"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,26 +31,30 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Portfolio project</title>
+    <title>Front-end developer - Rorisang</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Rorisang Logo"
+          />
           <img
             src="images/logo-small.png"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Rorisang Logo"
           />
         </a>
         <ul>
           <li class="active">
-            <a href="/"> Home</a>
+            <a href="/" title="Homepage"> Home</a>
           </li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/about.html" title="About Rorisang">About</a></li>
+          <li><a href="/work.html" title="Rorisang's Work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Rorisang">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -55,7 +63,7 @@
       <h1>Rorisang Mathiba</h1>
       <h2 class="mb-3">Front-end developer based in South Africa</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -64,7 +72,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid"
+            alt=" yogurt project preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -75,7 +87,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large langauge ocean. A small river name Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Launch Project</a
+            >
           </div>
         </div>
       </div>
@@ -89,16 +103,26 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large langauge ocean. A small river name Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Launch Project</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img
+            src="images/weather.png"
+            class="img-fluid"
+            alt="weather project preview"
+          />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="images/dictionary.png"
+            class="img-fluid"
+            alt="dictionary project preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -109,19 +133,26 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large langauge ocean. A small river name Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Launch Project</a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Launch Project</a
+            >
           </div>
         </div>
       </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
 
           <div>
-            <a href="" class="btn btn-branding mt-4">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-4"
+              title="Contact Rorisang"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center">
@@ -130,16 +161,34 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center mt-3">
-          <a href="https://www.instagram.com/rorisang" target="_blank">
+          <a
+            href="https://www.instagram.com/rorisang"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.twitte.com/rorisang" target="_blank"
+          <a
+            href="https://www.twitte.com/rorisang"
+            target="_blank"
+            title="X Profile"
             ><i class="fa-brands fa-x-twitter"></i
           ></a>
-          <a href="https://www.github.com/rorisang" target="_blank"
+          <a
+            href="https://www.github.com/rorisang"
+            target="_blank"
+            title="Github Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          🧚🏽‍♀️This project was coded by Rorisang Mathiba, and it is
+          <a
+            href="https://github.com/Rorisang-Mathiba/portfolio-project"
+            target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
