--- a/work.html
+++ b/work.html
@@ -30,6 +30,36 @@
     <title>Portfolio project</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Rorisang Logo"
+          />
+          <img
+            src="images/logo-small.png"
+            class="logo d-block d-md-none"
+            alt="Rorisang Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Rorisang">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Rorisang's Work">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Rorisang">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -38,7 +68,7 @@
             <img
               src="images/yogurt.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="yogurt project preview"
             />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
@@ -47,7 +77,7 @@
             <img
               src="images/weather.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="weather project preview"
             />
             <h3 class="text-center m-0">Weather Project</h3>
             <p class="text-center text-muted">
@@ -58,7 +88,7 @@
             <img
               src="images/dictionary.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="dictionary project preview"
             />
             <h3 class="text-center m-0">Dictionary Project</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
@@ -67,7 +97,7 @@
             <img
               src="images/translation.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="translation project preview"
             />
             <h3 class="text-center m-0">Translation Project</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
@@ -75,5 +105,56 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-4"
+            title="Contact Rorisang"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <a href="mailto:rorisang@gmail.com" class="email-link"
+          >rorisang@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mt-3">
+        <a
+          href="https://www.instagram.com/rorisang"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitte.com/rorisang"
+          target="_blank"
+          title="X Profile"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+        <a
+          href="https://www.github.com/rorisang"
+          target="_blank"
+          title="Github Profile"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+      </div>
+      <p class="text-center mt-5">
+        🧚🏽‍♀️This project was coded by Rorisang Mathiba, and it is
+        <a
+          href="https://github.com/Rorisang-Mathiba/portfolio-project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
